<resources>
    <string name="app_name">Lunion</string>
    <string name="nav_detect">Detect</string>
    <string name="nav_news">News</string>
    <string name="nav_air_quality">Air Quality</string>
    <string name="detect_page_title">Upload Lung Sound</string>
    <string name="btn_select_file">select file</string>
    <string name="btn_detect_lung">Detect</string>
    <string name="cd_lung">lung image</string>
    <string name="tv_file_name">file name</string>
    <string name="text_result_diagnose">Result type Diagnose</string>
    <string name="news_page_title">Discover News</string>
    <string name="news_page_title_2">All articles about lung shows here</string>
    <string name="tooltip_text">Search news...</string>
    <string name="text_air_page_1">Discover air quality index</string>
    <string name="text_air_page2">Get to know air quality condition in your area</string>
    <string name="text_btn_scan">Scan</string>
    <string name="cd_aq">img air</string>
    <string name="text_number_aqi">0</string>
    <string name="text_type_aqi">VERY HIGH POLLUTION</string>
    <string name="text_update_time_ago">Update: 15 seconds ago</string>
    <string name="cd_items_news">img news</string>
    <string name="tv_title_news">Menangani penyakit asma</string>
    <string name="tv_article_time">30 min ago</string>
    <string name="tv_source">BBC News</string>
    <string name="tv_news_content">lorem ipsum</string>
    <string name="tv_result_page">Prediction Result</string>
    <string name="tv_diagnose_result">Asthma Diagnose</string>
    <string name="tv_detect_page">Early detection which provides the prediction of lung\'s disease result and confidence </string>
    <string name="cd_img_detail_news">Image article</string>
    <string name="text_latlon">lat: 0342, Lon: 0342</string>
    <string name="text_loc">Banda aceh</string>
    <string name="splash_text1">Love your lung</string>
    <string name="splash_text2">Anywhere, Anytime</string>
    <string name="doctor_nurse">Doctor/Nurse</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_yet_register_here">No account? Register here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_patient">Enter patient email...</string>
    <string name="add_note_treatment">Add note Treatment...</string>
    <string name="submit">Submit</string>
    <string name="andi_s_lung">Andi\'s Lung</string>
    <string name="history">History</string>
    <string name="text_header_treatment">Treatment medical checkup list shows here</string>
    <string name="doctor">Doctor:</string>
    <string name="lorem_inpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_no_treatment">No history of treatment right now</string>
    <string name="patient">Patient</string>
    <string name="khairul">Khairul</string>
    <string name="patient2">Patient:</string>
    <string name="welcome_to_lunion">Welcome to Lunion!</string>
    <string name="text_lunion_tagline">Love your lung by monitoring it everyday</string>
    <string name="logo">Logo</string>
    <string name="already_have_account_login_here">Already have account? Login here</string>
    <string name="text_enable_notif_permission">Please Turn on Your device Location</string>
    <string name="text_load_register">Please wait, this may take a while...</string>
    <string name="text_fullname_required">Fullname is required</string>
    <string name="text_email_required">Email is required</string>
    <string name="text_password_required">password is required</string>
    <string name="cd_back">back icon</string>
    <string name="text_treatment_page_title">History Treatment</string>
    <string name="nav_logout">Logout</string>
    <string name="text_diagnose">Diagnose:</string>
    <string name="text_diagnose_type">Healthy</string>
    <string name="text_note_consult">Note:</string>
    <string name="text_confidence">%s</string>
    <string name="attention">Please upload .wav sound first then fill email field</string>
    <string name="confidence">Confidence:</string>
    <string name="_0">0%</string>
    <string name="text_greetings">Hello, %s!</string>
    <string name="text_notes">Give notes to patient</string>
    <string name="text_email_field">Enter patient\'s email</string>
    <string name="icon_time">icon time</string>
    <string name="text_button_send">Send</string>
    <string name="text_possible_type_disease">possible type diseases</string>
    <string name="text_possible_disease">Possible Disease</string>
</resources>